seting up video and pptx with some fix to code

--- a/code/compare_masks.ipynb
+++ b/code/compare_masks.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "63d35deb",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "0c019b84",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "bc888f14",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
     "def load_masks(path):\n",
     "    masks = {}\n",
     "    for file_name in os.listdir(path):\n",
-    "        if file_name.endswith(('.png', '.tif')):\n",
+    "        if file_name.endswith(('msk.png', 'msk.tif', 'msk.tiff')):\n",
     "            mask = cv2.imread(os.path.join(path, file_name), cv2.IMREAD_GRAYSCALE)\n",
     "            masks[os.path.splitext(file_name)[0]] = mask\n",
     "    return masks"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "658ebed9",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "7964f2b2",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "7dae76dc",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "d84928bd",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "fc595282",
    "metadata": {},
    "outputs": [
@@ -192,9 +192,11 @@
     "}\n",
     "df = pd.DataFrame(data)\n",
     "\n",
+    "pastel = plt.cm.get_cmap('Set3', 4)\n",
     "# Plot the scores with updated labels\n",
-    "df.plot(x=\"BIRADS\", kind=\"bar\", figsize=(12, 6), title=\"Comparison of Jaccard Scores\")\n",
+    "df.plot(x=\"BIRADS\", kind=\"bar\", figsize=(12, 6), title=\"Comparison of Jaccard Scores\", colormap=pastel)\n",
     "plt.xticks(rotation=0)\n",
+    "plt.ylabel(\"Jaccard Index\")\n",
     "plt.legend(loc=\"upper right\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "98e270f9",
    "metadata": {},
    "outputs": [
